resources/scss/ssrq-components/_form.scss
.form-control {
  background-color: white;
  display: inline-block;
  border-bottom: 0.1em solid $color-primary-lightest !important;
  background-image: none !important;
}

.form-control.has-dropdown {
  background-image: linear-gradient(
      45deg,
      transparent 50%,
      $color-primary-light 50%
    ),
    linear-gradient(135deg, $color-primary-light 50%, transparent 50%) !important;
  background-position: calc(100% - 20px) calc(1em + 2px),
    calc(100% - 15px) calc(1em + 2px) !important;
  background-size: 5px 5px, 5px 5px, 1px 1.5em !important;
  background-repeat: no-repeat !important;
}

.form-control.has-dropdown:focus {
  background-image: linear-gradient(
      45deg,
      $color-primary-light 50%,
      transparent 50%
    ),
    linear-gradient(135deg, transparent 50%, $color-primary-light 50%) !important;
  background-position: calc(100% - 15px) 1em, calc(100% - 20px) 1em !important;
  background-size: 5px 5px, 5px 5px, 1px 1.5em;
  background-repeat: no-repeat !important;
  outline: 0 !important;
}

.form-check-label ~ .form-check-label {
  margin-left: $margin-horizontal-base / 3;
}

